kubernetes/apps/gdd-plex/musicseerr/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: musicseerr
  annotations:
    tailscale.com/proxy-group: ts-ingress
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Media Management"
    gethomepage.dev/name: Musicseerr
    gethomepage.dev/icon: musicbrainz.svg
    gethomepage.dev/description: "Tailscale only | Music requester"
    gethomepage.dev/siteMonitor: "http://musicseerr.gdd-plex.svc:8688"
spec:
  ingressClassName: tailscale
  rules:
    - host: musicseerr.barn-walleye.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: musicseerr
                port:
                  number: 8688
  tls:
    - hosts:
        - musicseerr.barn-walleye.ts.net
